--- a/expertGroup.html
+++ b/expertGroup.html
@@ -511,8 +511,12 @@
 					var renwufenzujump;
 					$(function() {
 						//列表选中效果
-						$("#main—box  .list table tr").on("click", function() {
-							$(this).addClass("hover").siblings().removeClass("hover");
+						$("#main—box  .list table tr").on("click",function(){
+							if($(this).hasClass("hover")){
+								$(this).removeClass("hover");
+							}else{
+								$(this).addClass("hover");
+							}
 						})
 						//升降序样式
 						$("#main—box table tr th").on("click", "i", function() {
@@ -566,16 +570,26 @@
 						//							count: 100,
 						//							theme: '#3299e8'
 						//						});
-						laypage.render({
-							elem: 'leftPage',
-							count: 100,
-							layout: ['limit', 'prev', 'next']
-						});
-						laypage.render({
-							elem: 'rightPage',
-							count: 100,
-							layout: ['limit', 'prev', 'next']
-						});
+						 laypage.render({
+						    elem: 'leftPage'
+						    ,count: 50
+						    ,layout: ['prev', 'next']
+						    ,jump: function(obj, first){
+						      if(!first){
+						        layer.msg('第 '+ obj.curr +' 页');
+						      }
+						    }
+						  });
+						   laypage.render({
+						    elem: 'rightPage'
+						    ,count: 50
+						    ,layout: ['prev', 'next']
+						    ,jump: function(obj, first){
+						      if(!first){
+						        layer.msg('第 '+ obj.curr +' 页');
+						      }
+						    }
+						  });
 					})
 				</script>
 				<!-- InstanceEndEditable -->
