--- a/specialSubgroup.html
+++ b/specialSubgroup.html
@@ -10,7 +10,7 @@
 		<link href="static/css/comm.css" rel="stylesheet" type="text/css" />
 		<link href="static/css/template.css" rel="stylesheet" type="text/css" />
 		<script src="lib/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
-		<script src="lib/layer/2.4/layer.js" type="text/javascript"></script>
+		<!--<script src="lib/layer/2.4/layer.js" type="text/javascript"></script>-->
 		<!--上面是模板页内容不可动-->
 		<!-- InstanceBeginEditable name="head" -->
 		<link href="lib/layui/css/layui.css" rel="stylesheet" type="text/css">
